--- a/WebShopSolution/WebShop/appsettings.json
+++ b/WebShopSolution/WebShop/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+    "ConnectionString": {
+      "DefaultConnection": "Server=localhost;Database=MyAppDb;User Id=gn;Password=123Bye"
+    }
 }
