--- a/WebShopSolution/WebShop/appsettings.json
+++ b/WebShopSolution/WebShop/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-    "ConnectionString": {
-      "DefaultConnection": "Server=localhost;Database=MyAppDb;User Id=gn;Password=123Bye"
-    }
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=MyAppDb;User Id=gn;Password=123Bye"
+  }
 }
