--- a/WebShopSolution/WebShop/appsettings.json
+++ b/WebShopSolution/WebShop/appsettings.json
@@ -5,8 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=MyAppDb;User Id=gn;Password=123Bye"
-  }
+  "AllowedHosts": "*"
 }
